# AI

./: .gitignore  1.html  2.py  README.md  _1_.py  custom_exceptions.py  file.py  main_1.PY  main_2.py  new.html  pyproject.toml
1_simple/: styles.css
3_fastapi/: file_handling.py
4_Database/: SQL_Database.py  alembic.ini  main_1.py
4_Database/testing/: TODO.md  alembic.ini  main.py  query_db.py
4_Database/testing/config/: database.py
5_data_processing/: 1_numpy.py  2_pandas.py  output.json  readme.text
Trip2/: app.js  index.html  styles.css
Trip2 - Copy/: TODO.md  app.js  index.html  login.html  styles.css
_1_/: app.js  index.html
ai_and_data_science/: __init__.py  cli.py
google_add/: .env.example  TODO.md  main_2.py  models.py  requirements.txt  test_image.py  test_keywords.py
google_add/ad_generator/: __init__.py  ollama_client.py
pratice3/pratice3/: index.html  second.html
project School_Management_System/: alembic.ini  database.py  main.py
project School_Management_System/Database/: alembic.ini
project School_Management_System/crud/: course.py  student.py  teacher.py
project School_Management_System/routes/: attendance.py  auth.py  course.py  result.py  student.py  teacher.py
project School_Management_System/schemas/: auth.py  course.py  student.py  teacher.py
project School_Management_System/utils/: auth.py
project google_add/: .env.example  OLLAMA_SETUP.md
project google_add/ad_generator/: ad_generator.py  google_ads_client.py  image_analyzer.py
tests/: test_cli.py  test_geocode.py  test_weather.py
(+24 files in other folders)
