[project]
name = "ai-and-data-science"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "python-env (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "requests (>=2.28,<3.0.0)",
    "Flask (>=2.0,<3.0.0)",
    "click (>=8.0,<9.0)",
    "unicorn (>=2.1.4,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.5,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
]


[tool.poetry]
packages = [
    { include = "ai_and_data_science" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
main = "ai_and_data_science:main"
web-ui = "main_1:run_app"
mycli = "ai_and_data_science.cli:cli"
